--- a/app/src/main/res/layout/row_item.xml
+++ b/app/src/main/res/layout/row_item.xml
@@ -69,6 +69,7 @@
             android:layout_marginLeft="260dp"
             android:text="delete"
             android:textColor="#000"
+            android:background="@android:color/transparent"
             />
 
     </android.support.v7.widget.CardView>
